[tool.poetry]
name = "valentine-days"
version = "0.1.0"
description = ""
authors = ["Gpocas <gpocas01@gmail.com>"]
readme = "README.md"
packages = [{include = "valentine_days"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
